# mlx-audio-transcriptor

./: CLAUDE.md  README.md  audio_transcript_project_spec.md  config.toml.example  pyproject.toml  requirements.txt
app/: cli.py  config.py  main.py
app/models/: types.py
app/services/: diarization.py  file_naming.py  markdown_writer.py  minutes.py  minutes_generator.py  minutes_writer.py  notifier.py  segment_merger.py  settings.py  transcriber.py  vad.py
app/ui/: drop_area.py  main_window.py
app/workers/: transcription_worker.py
mlx_audio_transcriptor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli_scan.py  test_config.py  test_diarization.py  test_file_naming.py  test_markdown_writer.py  test_minutes_generator.py  test_minutes_orchestrator.py  test_minutes_writer.py  test_segment_merger.py  test_settings.py
