[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-audio-transcriptor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "mlx-whisper",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
